--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.9",
+    "@heroicons/vue": "^2.0.15",
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
