--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "^2.0.0-0",
-    "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "@vue/test-utils": "^2.2.10",
+    "@vue/vue3-jest": "^29.2.2",
     "autoprefixer": "^10.4.13",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
